Fixed header on small devices

--- a/css/header.css
+++ b/css/header.css
@@ -1,189 +1,208 @@
 header {
-	/* VARIABLES */
+    /* region Variables */
+    --hamburger-size: 33px;
+    --hamburger-patty-size: 4px;
+    --hamburger-left-indent: 33px;
+    --space-between-patty: 5px;
+    --header-height: 100px;
+    /* endregion Variables */
 
-	--hamburger-size: 33px;
-	--hamburger-patty-size: 4px;
-	--menu-height: 50px;
-	--hamburger-left-indent: 25px;
-	--logo-size: 200px;
-	--space-between-patty: 5px;
-	--menu-width: 100px;
-	--title-height: 56px;
+    /* region Positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: var(--header-height);
+    width: 100%;
+    z-index: 100;
+    /* endregion Positioning */
 
-	position: fixed;
-	top: 0;
-	left: 0;
-	height: var(--header-height);
-	width: 100%;
-	border-bottom: 1px solid var(--primary-font-color);
-	background-color: var(--background-color);
-	z-index: 100;
+    border-bottom: 1px solid var(--primary-font-color);
+    background-color: var(--background-color);
 }
 
-.headerTitle {
-	text-align: center;
-	position: absolute;
-	font-family: questa-grande, serif;
-	color: var(--primary-font-color);
-	font-size: 3rem;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: auto;
-	margin: 0;
-	transition: transform 0.5s ease, opacity 0.5s ease;
+#headerTitle {
+    position: absolute;
+    font-family: questa-grande, serif;
+    font-size: 3rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    transition: transform 0.5s ease, opacity 0.5s ease;
 }
+
+/* region Menu Item */
 
 header a {
-	text-decoration: none;
-	color: var(--primary-font-color);
+    text-decoration: none;
+    color: var(--primary-font-color);
 
-	transition: color 0.3s ease;
+    transition: color 0.3s ease;
 }
 
 header a:hover {
-	color: var(--primary-accent-color);
+    color: var(--primary-accent-color);
 }
 
-.navigationLogo {
-	display: block;
-	position: absolute;
-	top: 0;
-	right: 0;
-	z-index: 1;
+/* endregion Menu Item */
+
+/* region Header Logo */
+
+.headerLogo {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
 }
 
-.navigationLogo > img {
-	height: var(--header-height);
-	z-index: -2;
+.headerLogo > img {
+    height: var(--header-height);
+    z-index: -2;
 }
+
+/* endregion Header Logo */
+
+/* region Hamburger Button */
 
 #hamburgerButton {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	position: absolute;
-	left: 30px;
-	top: calc((var(--header-height) - var(--hamburger-size)) / 2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    left: var(--hamburger-left-indent);
+    top: calc((var(--header-height) - var(--hamburger-size)) / 2);
 
-	width: var(--hamburger-size);
-	height: var(--hamburger-size);
+    width: var(--hamburger-size);
+    height: var(--hamburger-size);
 
-	cursor: pointer;
+    cursor: pointer;
 }
 
 #hamburgerButton span {
-	background: var(--primary-font-color);
-	width: auto;
-	height: var(--hamburger-patty-size);
-	border-radius: 3px;
+    background: var(--primary-font-color);
+    width: auto;
+    height: var(--hamburger-patty-size);
+    border-radius: 3px;
 
-	transition: transform 0.5s cubic-bezier(0.77, 0.0, 0.05, 1.0),
-	background 0.5s cubic-bezier(0.77, 0.0, 0.05, 1.0),
-	opacity 0.55s ease;
+    transition: transform 0.5s cubic-bezier(0.77, 0.0, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.0, 0.05, 1.0),
+    opacity 0.55s ease;
 }
 
 #hamburgerButton span:first-child {
-	transform-origin: top left;
-	margin: 0 0 var(--space-between-patty) 0;
+    transform-origin: top left;
+    margin: 0 0 var(--space-between-patty) 0;
 }
 
 #hamburgerButton span:last-child {
-	margin: var(--space-between-patty) 0 0 0;
-	transform-origin: top left;
+    margin: var(--space-between-patty) 0 0 0;
+    transform-origin: top left;
 }
 
 .open > span:first-child {
-	transform: rotate(45deg) scale(0.8, 1) translate(0, -1px);
+    transform: rotate(45deg) scale(0.8, 1) translate(0, -1px);
 }
 
 .open > span:nth-last-child(2) {
-	opacity: 0;
-	transform: scale(0, 0);
+    opacity: 0;
+    transform: scale(0, 0);
 }
 
 .open > span:nth-last-child(1) {
-	transform: rotate(-45deg) scale(0.8, 1) translate(-2px, -2px);
+    transform: rotate(-45deg) scale(0.8, 1) translate(-2px, -2px);
 }
 
+/* endregion Hamburger Button */
+
+#menuNav {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    transform-origin: 0 0;
+}
+
+.headerContent {
+	background-color: var(--background-color);
+	height: var(--header-height);
+	border-bottom: 1px solid var(--primary-font-color);
+}
+
+/* Smaller Devices */
 @media only all and (max-width: 820px) {
-	#menuNav {
-		transform-origin: 0 0;
-		transform: translate(0, -100%);
-		transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-		position: absolute;
-		left: 0;
-		top: var(--header-height);
+    #menuNav {
+        transform: translate(0, -100%);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+        left: 0;
+        top: var(--header-height);
 
-		border: 1px solid var(--primary-font-color);
-		border-left: 0;
-		z-index: -1000;
-	}
+        border: 1px solid var(--primary-font-color);
+        border-left: 0;
+        z-index: -1000;
+    }
 
-	#menu {
-		opacity: 1;
-		background-color: var(--background-color);
+    #menu {
+        opacity: 1;
+        background-color: var(--background-color);
 
-		display: flex;
-		flex-direction: column;
-		padding: 0 20px;
-		margin: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 0 20px;
+        margin: 0;
 
-		list-style-type: none;
-	}
+        list-style-type: none;
+    }
 
-	#menu li {
-		padding: 10px 0;
-		font-size: 22px;
-	}
+    #menu li {
+        padding: 10px 0;
+        font-size: 1.375em;
+    }
 
-	.open ~ #menuNav {
-		transform: none;
-	}
+    #menuNav.openMenu {
+        transform: none;
+    }
 
-	.header .headerTitle {
-		font-size: 2.5rem;
-	}
+    #headerTitle {
+        font-size: 2.5rem;
+    }
 }
 
 @media all and (max-width: 350px) {
-	.header .headerTitle {
-		font-size: 1.75rem;
-	}
+    #headerTitle {
+        font-size: 1.75rem;
+    }
 }
 
+/* Larger Devices */
 @media only all and (min-width: 820px) {
-	#menuNav {
-		padding: 0;
-		margin: 0;
-		position: absolute;
-		top: 50%;
-		left: 50px;
-		transform: translate(-110%, -50%);
+    #menuNav {
+        top: 50%;
+        left: 50px;
+        transform: translate(-110%, -50%);
 
-		transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-	}
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    }
 
-	#menu {
-		display: flex;
-		flex-direction: row;
-		padding: 0;
-	}
+    #menu {
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+    }
 
-	#menu li {
-		list-style-type: none;
-		padding: 0 20px;
-		font-family: sans-serif;
-		font-size: 1rem;
-		text-transform: uppercase;
-	}
+    #menu li {
+        list-style-type: none;
+        padding: 0 20px;
+        font-family: sans-serif;
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
 
-	.open ~ #menuNav {
-		transform: translate(0, -50%);
-	}
+    #menuNav.openMenu {
+        transform: translate(0, -50%);
+    }
 
-	.open~ .headerTitle {
-		opacity: 0;
-		transform: translate(200%, -50%);
-	}
+    #headerTitle.openTitle {
+        opacity: 0;
+        transform: translate(200%, -50%);
+    }
 }
